--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -17,4 +17,5 @@ jobs:
 
       - uses: superfly/flyctl-actions/setup-flyctl@master
 
-      - run: flyctl deploy --remote-only
+      - run: flyctl deploy --remote-only \
+          --build-secret DATABASE_URL=${{ secrets.DATABASE_URL }}
